# neurotheatre_ezmsg

./: README.md  main.py  pyproject.toml
models/: signal_to_audio.py  signal_to_midi.py
src/neurotheatre/: audioloopback.py  bandunit.py  command.py  frequencydecoder.py  imu_udp_receive.py  injector.py  midiunit.py  osc.py  signal_to_audio.py  signal_to_band.py  signal_to_midi.py  signal_to_wave.py  upsample.py  waveunit.py
src/neurotheatre/muse/: musedevice.py
src/test/: mido_sample_test.py  pyaudio_sample_test.py  upsampling_test.py
